fix(requests): ensure location is prefilled (#581)
- ensure the location is prefilled when creating a request
- ensure the location is prefilled when editing a request
- fix the 'No travelling members in  your team' text that gets distorted
- fix the toast that prevents clicking until it is closed.

[Fixes #163941454]

--- a/src/index.scss
+++ b/src/index.scss
@@ -56,3 +56,8 @@ body {
   line-height: 21px;
   text-transform: none;
 }
+
+// allow clicking content behind a toast
+#toast-container {
+  pointer-events: none !important;
+}
